--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "private": true,
   "dependencies": {
     "connect": "^3.2.0",
+    "cors": "^2.8.5",
     "js-yaml": "^3.3.0",
     "mysql": "^2.16.0",
     "q": "^1.5.1",
-    "swagger-tools": "0.10.1"
+    "swagger-tools": "^0.10.4"
   }
 }
